# NegociationApp

./: CMakeLists.txt  README.md  main.cpp
backend/include/: Acheteur.h  BoiteAuLettres.h  Message.h  Produit.h  Protocol.h  Threads_var.h  Vendeur.h  Voiture.h  back_end_main.h
backend/src/: Acheteur.cpp  BoiteAuLettres.cpp  Message.cpp  Produit.cpp  Protocol.cpp  Threads_var.cpp  Vendeur.cpp  Voiture.cpp  back_end_main.cpp
frontend/include/: MainWindow.h  Parametres.h  StartScreen.h  Vente.h  chats.h  garage.h  store.h
frontend/src/: MainWindow.cpp  Parametres.cpp  StartScreen.cpp  Vente.cpp  chats.cpp  garage.cpp  store.cpp
frontend/ui/: MainWindow.ui  Parametres.ui  StartScreen.ui  chats.ui  garage.ui  store.ui
